@@ -1,19 +1,33 @@
-module.heatmap <- function(c5Tree, pigengene, saveDir, testD=NULL, testL=NULL, 
+module.heatmap <- function(c5Tree=NULL, pigengene, saveDir, testD=NULL, testL=NULL, 
                            pos=0, verbose=0, doAddEigengene=TRUE,  scalePngs=1,... ){
     ## Takes a decision tree and a pigengene as input
     ## and creates one heatmap for each module
-    ## pos > 0 removes genes similar to compact.tree behaviour
+    ## pos > 0 removes genes similar to compact.tree behavior
     result <- list()
     result[["call"]] <- match.call()
     result[["saveDir"]] <- saveDir
     trainDir <- combinedPath(saveDir, 'train')
     testDir <- combinedPath(saveDir, 'test')
+    allDir <- combinedPath(saveDir, 'all')
     if(!is.null(c5Tree)){
+        message.if("Plotting the heatmaps for the nodes of the tree...", verbose=verbose)
         feats <- get.used.features(c5Tree=c5Tree)
+        plotDir <- trainDir
     } else {
+        message.if("Plotting the heatmaps for all modules...", verbose=verbose)
         feats <- colnames(pigengene$eigengenes)
+        plotDir <- allDir
     }
-    modules <- pigengene$orderedModules
+    message.if("Features:", verbose=verbose-1)
+    message.if(paste(feats, collapse=", "), verbose=verbose-1)
+    modules0 <- pigengene$orderedModules
+    ## It is possible that a gene is not present in the pigengene$Data, but be in the modules,
+    ##^ for example, when two datasets are used and the gene is NA in one of the datasets.
+    ## We cannot include such genes in the heatmap.
+    modules <- modules0[intersect(names(modules0), colnames(pigengene$Data))]
+    if(length(modules0) > length(modules)){
+        warning(paste("Data are not available for", length(modules0)-length(modules), "genes in the modules."))
+    }
     ## If we are only interested in the expression of the genes in the compact Tree:
     if(pos>0 & !is.null(c5Tree)){
         whatMatters <- get.genes(pos=pos, c5Tree=c5Tree, enhance=TRUE, pigengene=pigengene)
@@ -23,7 +37,7 @@ module.heatmap <- function(c5Tree, pigengene, saveDir, testD=NULL, testL=NULL,
     rmnas <- function(dat){
         sds <- sapply(as.data.frame(dat), sd)
         if(any(sds<1E-7 | is.na(sds))){
-            dat <- dat[, -which(sds<1E-7 |is.na(sds))]
+            dat <- dat[, -which(sds<1E-7 |is.na(sds)), drop=FALSE]
         }
         return(dat)
     }
@@ -32,32 +46,38 @@ module.heatmap <- function(c5Tree, pigengene, saveDir, testD=NULL, testL=NULL,
         if(min(x)<max(x)){
             ret <- ((x-min(x))/(max(x)-min(x)))}
         return(ret)}
-    mkpngs <- function(f1, data, saveDir1, anR){
+    mkpngs <- function(f1, Data, saveDir1, anR){
+        if(ncol(Data)<2){
+            message.if("I need at least 2 columns (genes) to plot a heatmap. Skipped.", verbose=verbose-3)
+            return(NULL)
+        }
         dir.create(path=saveDir1, recursive=TRUE, showWarnings=FALSE)
-        message.if(paste("Plotting heatmaps for",f1,"with",ncol(data),"columns in:", saveDir1), verbose=verbose)
-        fn <- paste(f1, '.png', sep='') ## Habil.
-        ##fn=paste('heat', f1, '.png', sep='')
+        message.if(paste("Plotting heatmaps for",f1,"with",ncol(Data),"columns in:", saveDir1), verbose=verbose)
         legwidth=16*max(nchar(as.character(anR)))
         ##legwidth=16*max(nchar(as.character(pigengene$annotation[, 1])))
         if(scalePngs!=1){
-            wdt <- 220+(scalePngs*ncol(data))+legwidth  ## scalePngs used to be 7 here.
-            hgt <- 210+(scalePngs*nrow(data)) ##scalePngs used to be 7.8 here.
+            wdt <- 220+(scalePngs*ncol(Data))+legwidth  ## scalePngs used to be 7 here.
+            hgt <- 210+(scalePngs*nrow(Data)) ##scalePngs used to be 7.8 here.
             fontsizeH <- scalePngs*20
         } else {
             wdt <- 4*480
             hgt <- 2*480
             fontsizeH <- 20
         }
-        png(combinedPath(dir=saveDir1, fn=fn), width=wdt, height=hgt)
-        pheatmap.type(Data=data, annRow=anR, type='type', fontsize=fontsizeH, show_rownames = FALSE, ...)
+        fn1 <- combinedPath(dir=saveDir1, fn=paste0(f1, '.png'))
+        message.if(paste("Plotting:", fn1), verbose=verbose-1)      
+        png(fn1, width=wdt, height=hgt)
+        pheatmap.type(Data=Data, annRow=anR, type='type', fontsize=fontsizeH, show_rownames = FALSE, ...)
         dev.off()
-        fn2 <- paste("scaled_", fn, sep='')
-        png(combinedPath(dir=saveDir1, fn=fn2), width=wdt, height=hgt)
-        pheatmap.type(Data=scale(data), annRow=anR, type='type',fontsize=fontsizeH, ...)
+        fn2 <- combinedPath(dir=saveDir1, fn=paste0(f1, "_scaled.png"))
+        message.if(paste("Plotting:", fn2), verbose=verbose-1)
+        png(fn2, width=wdt, height=hgt)
+        pheatmap.type(Data=scale(Data), annRow=anR, type='type',fontsize=fontsizeH, ...)
         dev.off()
-        fn3 <- paste("scaledMinMax_", fn, sep='')
-        png(combinedPath(dir=saveDir1, fn=fn3), width=wdt, height=hgt)
-        pheatmap.type(Data=apply(scale(data), FUN=minmax, MARGIN=2), annRow=anR, type='type',
+        fn3 <- combinedPath(dir=saveDir1, fn=paste0(f1, "_scaledMinMax.png"))
+        message.if(paste("Plotting:", fn3), verbose=verbose-1)
+        png(fn3, width=wdt, height=hgt)
+        pheatmap.type(Data=apply(scale(Data), FUN=minmax, MARGIN=2), annRow=anR, type='type',
                       fontsize=fontsizeH, ...)
         dev.off()
     }
@@ -84,25 +104,26 @@ module.heatmap <- function(c5Tree, pigengene, saveDir, testD=NULL, testL=NULL,
         anRtest <- anRtest[rownames(D1test),,drop=FALSE]
         ##rownames(anRtest) <- rownames(D1test) 
     }
-    ## combined expression plot of the genes in relevant modules 
+    ## combined expression plot of the genes in relevant modules
     if(!is.null(c5Tree)){
-        data <- rmnas(D1[, names(modules)[which(modules %in%gsub("ME", "", feats))]])
-        mkpngs(f1="combined", data=data, saveDir1=trainDir, anR=anR)
+        ## Subsetting only the genes in the modules:
+        Data <- rmnas(D1[, names(modules)[which(modules %in%gsub("ME", "", feats))]])
+        mkpngs(f1="combined", Data=Data, saveDir1=plotDir, anR=anR)
         if(!is.null(anRtest)){
-            testdata <- rmnas(D1test[, match(colnames(data), colnames(D1test))])
-            mkpngs(f1="combined", data=testdata, saveDir1=testDir, anR=anRtest)
+            testdata <- rmnas(D1test[, match(colnames(Data), colnames(D1test))])
+            mkpngs(f1="combined", Data=testdata, saveDir1=testDir, anR=anRtest)
         }
     }
     ## Per module plots
     for(f1 in feats){
-        ##long lines :)
-        data <- rmnas(D1[, names(modules)[which(modules==gsub("ME", "", f1))]])
+        message.if(paste("Module:", f1), verbose=verbose-1)
+        Data <- rmnas(D1[, names(modules)[which(modules==gsub("ME", "", f1))], drop=FALSE])
         if(doAddEigengene)
-            data <- cbind(data,pigengene$eigengenes[rownames(data),f1,drop=FALSE])
-        mkpngs(f1=f1, data=data, saveDir1=trainDir, anR=anR)
+            Data <- cbind(Data,pigengene$eigengenes[rownames(Data),f1,drop=FALSE])
+        mkpngs(f1=f1, Data=Data, saveDir1=plotDir, anR=anR)
         if(!is.null(anRtest)){
-            testdata <- rmnas(D1test[, match(colnames(data), colnames(D1test))])
-            mkpngs(f1=f1, data=testdata, saveDir1=testDir, anR=anRtest)
+            testdata <- rmnas(D1test[, match(colnames(Data), colnames(D1test))])
+            mkpngs(f1=f1, Data=testdata, saveDir1=testDir, anR=anRtest)
         }
     }
     invisible(result)
